# XOS

./: Cargo.toml  x86_64-os.json
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
