[package]
authors = ["devdutt"]
edition = "2018"
name = "os"
version = "0.1.0"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"

[package.metadata.bootimage]
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
	"-serial", "stdio",
	"-display", "none"
	]
test-timeout = 300
test-success-exit-code = 33

[[test]]
name = "should_panic"
harness = false
